--- a/website/site.html
+++ b/website/site.html
@@ -46,13 +46,19 @@
           <li class="has-submenu">
             <a href="#">PARENTS</a>
             <ul class="submenu menu vertical medium-horizontal" data-submenu>
-              <li><a href="#">First link in dropdown</a></li>
+              <li><a href="#">PTA</a></li>
+              <li><a href="#">Parent Coordinator</a></li>
+              <li><a href="#">Parent Links</a></li>
+              <li><a href="#">BTECH Cell Phone Policy</a></li>
+              <li><a href="#">Purchasing Shirts for PE</a></li>
             </ul>
           </li>
           <li class="has-submenu">
             <a href="#">MORE</a>
             <ul class="submenu menu vertical" data-submenu>
-              <li><a href="#">First link in dropdown</a></li>
+              <li><a href="#">Students</a></li>
+              <li><a href="#">Multi-Media</a></li>
+              <li><a href="#">Log-in</a></li>
             </ul>
           </li>
         </ul>
