--- a/website/site.html
+++ b/website/site.html
@@ -26,7 +26,7 @@
 
       <div class="logo-wrapper hide-for-small-only">
         <div class="logo">
-          <img src="http://placehold.it/350x150?text=LOGO">
+          <img src="images\schools_btech.gif">
         </div>
       </div>
 
